Fix modal being cut off when caught between sm breakpoint and modal-md value.
When resizing the modal between the sm default breakpoint of 544px and the modal-md value of 600px, the modal gets cut off until it reaches the 600px width. The fix applied here was to use max-width instead of width.

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -130,7 +130,7 @@
 @include media-breakpoint-up(sm) {
   // Automatically set modal's width for larger viewports
   .modal-dialog {
-    width: $modal-md;
+    max-width: $modal-md;
     margin: 30px auto;
   }
   .modal-content {
